Write to firestore

--- a/flutter/dynamic_redirect_config/.gitignore
+++ b/flutter/dynamic_redirect_config/.gitignore
@@ -37,6 +37,9 @@ build/
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 
+# Avoids syncing api keys
+**/google-services.json
+
 # iOS/XCode related
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
